traces/trace-kuadrant/demo/echo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-api
  namespace: connlink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-api
  template:
    metadata:
      labels:
        app: echo-api
    spec:
      containers:
        - name: echo-api
          image: quay.io/3scale/echoapi:stable
          ports:
            - containerPort: 9292
          readinessProbe:
            httpGet:
              path: /test/200
              port: 9292
            initialDelaySeconds: 15
          livenessProbe:
            tcpSocket:
              port: 9292
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: echo-api
  namespace: connlink
spec:
  selector:
    app: echo-api
  ports:
    - name: http
      port: 80
      targetPort: 9292
