traces/trace-kuadrant/demo/httproute-echo-api.yaml
# Ajustar hostname al FQDN de tu ruta (ej. api.apps.sno.home).
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-api
  namespace: connlink
  labels:
    service: echo-api
    deployment: echo-api
spec:
  hostnames:
    - api.apps.sno.home
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw-two
  rules:
    - name: default
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-api
          port: 80
